--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
     crossorigin="anonymous" referrerpolicy="no-referror">
-    <link rel="stylesheet" href="2.CSS">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class ='hero'>
